# hal_ambiq_orig

./: CMakeLists.txt
CMSIS/AmbiqMicro/Include/: system_apollo4p.h
boards/: CMakeLists.txt
devices/: am_devices.h  am_devices_button.c  am_devices_button.h  am_devices_cooper.c  am_devices_cooper.h  am_devices_dsi_rm67162.c  am_devices_dsi_rm67162.h  am_devices_led.c  am_devices_led.h  am_devices_mspi_atxp032.c  am_devices_mspi_atxp032.h  am_devices_mspi_ds35x1ga.c  am_devices_mspi_ds35x1ga.h  am_devices_mspi_is25wx064.c  am_devices_mspi_is25wx064.h  am_devices_mspi_psram_aps12808l.c  am_devices_mspi_psram_aps12808l.h  am_devices_mspi_psram_aps25616n.c  am_devices_mspi_psram_aps25616n.h  am_devices_mspi_psram_aps6404l.c  am_devices_mspi_psram_aps6404l.h  am_devices_mspi_psram_w958d6nw.c  am_devices_mspi_psram_w958d6nw.h  am_devices_mspi_rm67162.c  am_devices_mspi_rm67162.h  am_devices_mspi_rm69330.c  am_devices_mspi_rm69330.h  am_devices_nemadc_rm67162.c  am_devices_nemadc_rm67162.h  am_devices_spiflash.c  am_devices_spiflash.h  am_devices_spipsram.c  am_devices_spipsram.h  am_devices_tma525.c  am_devices_tma525.h
mcu/: Makefile  am_sdk_version.h
mcu/apollo4p/: CMakeLists.txt  am_mcu_apollo.h
utils/: am_util.h  am_util_ble.c  am_util_ble.h  am_util_ble_cooper.c  am_util_ble_cooper.h  am_util_debug.c  am_util_debug.h  am_util_delay.c  am_util_delay.h  am_util_faultisr.c  am_util_id.c  am_util_id.h  am_util_regdump.c  am_util_regdump.h  am_util_stdio.c  am_util_stdio.h  am_util_string.c  am_util_string.h  am_util_time.c  am_util_time.h
zephyr/: module.yml
(+117 files in other folders)
